fixed flickering floor bug

--- a/sass/bouncycastle/_floors.scss
+++ b/sass/bouncycastle/_floors.scss
@@ -14,6 +14,10 @@
     $texture-size: cover
   );
   transform: translateZ(-$floor-depth - 40px);
+
+  .face-bottom{
+    display: none;
+  }
 }
 
 .floor__section{
